# mof-synthesis-data-modeling

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/Fe–terephthalate/: Fe–terephthalateRaw.csv  mpif_params.json
data/Fe–terephthalate/PXRD/: PXRD_S-3_Cu-Kα1_capillary-0.7mm.xyd  PXRD_S-7_Cu-Kα1_capillary-0.7mm.xyd
data/Fe–terephthalate/converted/: characterization_from_Fe–terephthalate.json  characterization_from_MIL.json  procedure_from_Fe–terephthalate.json
data/MIL-88B_101/: Esen-mof-synthesis.csv  esen-mof-2.csv  esen-mof.csv  mpif_params.json
data/MIL-88B_101/PXRD/: PXRD_MIL-101-DMF_Cu-Kα1_capillary-0.7mm.xyd  PXRD_MIL-101-Water_Cu-Kα1_capillary-0.7mm.xyd  PXRD_MIL-53-Dry_Cu-Kα1_capillary-0.7mm.xyd  PXRD_MIL-53-Water_Cu-Kα1_capillary-0.7mm.xyd  (+19 more)
data/MOCOF-1/: README.md  mpif_params.json
data/PXRD/: PXRD_Blank_Cu-Ka1_capillary-1mm_3s-deg.xyd  PXRD_Blank_Cu-Ka1_film-3mm_3s-deg.xyd  PXRD_KE-002_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-005_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-008_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-011_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-013_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-016_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-021_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-022_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-026_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-035_Cu-Ka1_capillary-0.3mm_5s-deg.xyd  PXRD_KE-040_Cu-Ka1_film-3mm_5s-deg.xyd  PXRD_KE-041_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-043_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-044_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-048-3_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-049-3_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-049-5_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-050-1-2_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-050_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-051_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-052_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-053-2_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-053-4_Cu-Ka1_capillary-0.5mm_5s-deg.xyd  PXRD_KE-059_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-060-2_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-060-3_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-063_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-064_Cu-Ka1_film-3mm_5s-deg.xyd  PXRD_KE-069_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-074_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-076_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-076_Cu-Ka1_capillary-1mm_60s-deg.xyd  PXRD_KE-079_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-081_Cu-Ka1_film-3mm_5s-deg.xyd  PXRD_KE-083_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-084_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-085_Cu-Ka1_capillary-1mm_5s-deg.xyd  PXRD_KE-088_Cu-Ka1_film-3mm_5s-deg.xyd  (+116 more)
data_model/: Fe–terephthalate.schema.json  MIL.schema.json  README.md  characterization.schema.json  mocof-1-params.schema.json  mpif_params.schema.json  procedure.schema.json  procedure_MOCOF-1.schema.json
fairsynthesis_analysis/: Decision-tree_3-levels  MOCOF-1_decision_tree_dtreeviz  MOCOF-1_decision_tree_dtreeviz_path  MOCOF-1_decision_tree_dtreeviz_subset  README.md  __init__.py  decision-tree_input.csv  dtreeviz_decision_tree_l_full  dtreeviz_decision_tree_l_max_depth_3  dtreeviz_decision_tree_max_depth_3  pyproject.toml
fairsynthesis_analysis/examples/: correlation_analysis.mo.py  decision_tree.py  decision_tree_model.py  deduplicate_experiments.py  plot_decision_tree.py  pxrd-analysis_old.py  pxrd_analysis.mo.py  pxrd_analysis.py  range_decision_tree.py  statistics.mo.py
fairsynthesis_analysis/examples/data/: phase_molar-fractions.csv  pxrd_molar_fraction_overview.csv  pxrd_yield_overview.csv  settings.json
fairsynthesis_analysis/fairsynthesis_analysis/: __init__.py  _pxrd.py
fairsynthesis_data_model/: README.md  pyproject.toml
fairsynthesis_data_model/examples/: generate_all.py  mofsy_api_example.py
fairsynthesis_data_model/fairsynthesis_data_model/: extract_interesting_params.py  merge_mofsy.py  mil2_2mofsy.py  mil2mofsy.py  mofsy2mpif.py  mofsy2xdl.py  mofsy_api.py  mofsy_api_example.py  mofsy_utils.py  pxrd_collector.py  sciformation2mofsy.py  sciformation_cleaned_utils.py  sciformation_cleaner.py  utils.py
fairsynthesis_data_model/fairsynthesis_data_model/schemas/: MIL.schema.json  MIL_2.schema.json  README.md  characterization.schema.json  mocof-1-params.schema.json  mofsy.schema.json  mpif_params.schema.json  procedure.schema.json  sciformation_eln_cleaned.schema.json
fairsynthesis_data_model/fairsynthesis_data_model/use_case_specific/: sciformation_cleaner_mocof1.py  sciformation_cleaner_mocof1_llm.py
fairsynthesis_data_model/mofsy2mpif/: README.md  package-lock.json  package.json  tsconfig.json
fairsynthesis_data_model/mofsy2mpif/src/: mofsy2mpif.ts
scripts/: Decision-tree_3-levels  README.md  format_and_serialize_all.py  generate_decision_trees.py  mofsy_api_example.py
scripts/mofsy2mpif/: README.md
scripts/pxrd_analysis/: convex-hull.mo.py  pxrd_analysis.mo.py  statistics.mo.py
(+834 files in other folders)
