[project]
name = "fair-synthesis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pyzmq>=27.1.0",
    "altair>=5.5.0",
    "marimo>=0.12.6",
    "molmass>=2025.9.4",
    "numpy>=2.2.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.26.0",
    "pybaselines>=1.2.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.15.2",
    "graphviz>=0.21",
    "dtreeviz>=2.2.2",
    "matplotlib>=3.10.7",
    "jsonschema>=4.24.0",
    "lxml>=5.4.0",
    "openai>=2.6.1",
    "pubchempy>=1.0.4",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "sympy>=1.14.0",
    "starfile>=0.5.13",
    "npm>=0.1.1",
]

readme = "README.md"

authors = [
    { name = "Felix Neubauer" },
    { name = "Kenichi Endo" },
    { name = "Frederic Bender" }
]

[tool.uv]
package = true
