[project]
name = "fairsynthesis-analysis"
version = "0.1.0"
description = "A tool for analyzing FAIRSynthesis data in the JXDL format."
readme = "README.md"
authors = [
    { name = "Frederic Bender", email = "frederic.bender@itt.uni-stuttgart.de" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "fairsynthesis-data-model",
    "marimo>=0.12.6",
    "molmass>=2025.9.4",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pybaselines>=1.2.0",
    "scipy>=1.15.2",
]

[project.scripts]
fairsynthesis-analysis = "fairsynthesis_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = []
extend-exclude = ["*.mo.py"]
line-length = 120

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"collections" = "co"
"functools" = "ft"
"itertools" = "it"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.uv.sources]
fairsynthesis-data-model = { workspace = true }
